# battery_monitor

./: .gitignore  LICENSE  README.md  battery.py  battery_log.py  pyproject.toml  temp.py  temp1.py
battery-monitor/: battery.py
battery_log/: battery_log.csv  battery_log.py  battery_log_1.csv  battery_log_2.csv
battery_monitor/: battery.py
battery_monitor/cell_data/: panasonic_ncr18650ga.csv
scripts/: battery_discharge_logger.py  battery_soc_logger.py
