[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-monitor"
version = "0.1.0"
dependencies = []

[tool.setuptools]
packages = ["battery_monitor"]

[tool.setuptools.package-dir]
battery_monitor = "battery-monitor"

[tool.setuptools.package-data]
battery_monitor = ["cell_data/*.csv"]